[package]
name = "rpi-os"
version = "0.1.0"
edition = "2021"

[dependencies]
aarch64-cpu = "*"
phf = { version = "*", default-features=false, features=["macros"] }
qemu-exit = "*"
tock-registers = "*"
[lib]
name = "libkernel"
test = true

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false

[features]
default = []
verbose = []
