[package]
name = "rpi-os"
edition = "2021"
version = "0.1.0"

[dependencies]
bitfield-struct = "0.4.2"
derive_more = "0.99.17"
num-derive = "0.3.3"
qemu-exit = "*"

[dependencies.num-traits]
version = "0.2.15"
features = []
optional = false
default-features = false

[dependencies.tock-registers]
version = "0.8.1"
features = []
optional = false

[features]
default = ["rpi3"]
rpi3 = []
verbose = []

[[bin]]
name="kernel"


[lib]
name = "stdos"
plugin = false
proc-macro = false
required-features = []


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
