[package]
name = "rpi-os"
edition = "2021"
version = "0.1.0"

[dependencies]
bitfield-struct = "0.4.4"
derive_more = "0.99.17"
num-derive = "0.3.3"
qemu-exit = "3.0.1"
tock-registers = "0.8.1"

[dependencies.num-traits]
version = "0.2.15"
default-features = false

[lib]
name = "stdos"
plugin = false
proc-macro = false

[profile.dev]
split-debuginfo = "packed"
panic = "abort"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
# On macOS, `strip = true` causes compilation to fail, but we can accomplish similar behavior via a
# flag to the linker
# Issue: https://github.com/rust-lang/rust/issues/110536
