[package]
name = "bootloader-server"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.8", features = ["derive"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serialport]
version = "4.2.1"
default-features = false

