[package]
name = "os"
version = "0.1.0"
edition = "2021"

[dependencies]
bitfield-struct = "0.4.4"
derive_more = "0.99.17"
hashbrown = "0.14.2"
num-derive = "0.3.3"
tock-registers = "0.8.1"

[dependencies.bitvec]
version = "1.0.1"
default-features = false

[dependencies.num-traits]
version = "0.2.15"
default-features = false

[dependencies.device-tree]
path = "../device-tree"

[lib]
name = "stdos"
plugin = false
proc-macro = false
test = false

[[bin]]
name = "kernel"
test = false

[[bin]]
name = "init"
test = false
