[package]
name = "os"
version = "0.1.0"
edition = "2021"

[dependencies]
bitfield-struct = "0.5.6"
tock-registers = "0.9.0"
macros = { path = "../macros" }
device-tree = { path = "../device-tree" }

[lib]
name = "stdos"
plugin = false
proc-macro = false
test = false

[[bin]]
name = "kernel"
test = false

[[bin]]
name = "init"
test = false
